--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    
-
+    <div class="box">
+        <div class="center">
+        <h1>Password suggerita:</h1>
+        <span id="passwordSuggest"></span>
+        </div>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
